Fixing ring buffer functionality